Fixed issue with margins not disappearing on smaller screens

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -4,9 +4,9 @@ main {
     display: flex;
     flex-direction: row;
     column-gap: 20px;
+    row-gap: 20px;
     align-items: stretch;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-right: 10px;
 
     @media (max-width: $mobileScreenSize) {
         flex-direction: column;
